added metallitica logo and the form, then centered them on the screen

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   </head>
   <body>
     <section class="homepage">
-
+      <img class="logo" src="https://www.metallica.com/on/demandware.static/Sites-Metallica-Site/-/default/dw716898e9/images/header/logo-homepage.svg">
+      <h1 class="form-header">Get Tickets Now</h1>
+      <form class="register-form">
+        <input type="text">
+        <input type="submit">
+      </form>
     </section>
-
   </body>
 </html>
