--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <section class="homepage">
       <img class="logo" src="https://www.metallica.com/on/demandware.static/Sites-Metallica-Site/-/default/dw716898e9/images/header/logo-homepage.svg">
-      <form class="register-form">
+      <form class="register-form" action="complete.html" method="get">
       <h1 class="form-header">Get Updates About Ticket Sales</h1>
         <input type="text" placeholder="Enter email to get updates for tickets">
         <input type="submit" value='Register'>
